--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="myCostomToolBar" parent="Base.ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorPrimary">#000</item>
+    </style>
+
 </resources>
