--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,6 +29,10 @@
             android:icon="@drawable/ic_add_to_queue_black_24dp"
             android:title="Data Kesehatan Sapi" />
         <item
+            android:id="@+id/nav_ganti"
+            android:icon="@drawable/ic_help_outline_black_24dp"
+            android:title="Kehilangan TAG?"/>
+        <item
             android:id="@+id/nav_tes"
             android:icon="@drawable/ic_add_to_queue_black_24dp"
             android:title="tes" />
