--- a/app/src/main/res/layout/activity_daftar_tag.xml
+++ b/app/src/main/res/layout/activity_daftar_tag.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#877054"
     tools:context="com.example.ardiani.myapplication.daftarTag">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="Daftar Tag RFID"
         android:textAlignment="center"
         android:textSize="22dp"
@@ -20,7 +21,8 @@
         android:id="@+id/txidrfid"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="60dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -34,6 +36,7 @@
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="110dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -47,6 +50,7 @@
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="160dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -60,6 +64,7 @@
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="210dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -73,6 +78,7 @@
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="260dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -87,6 +93,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="310dp"
         android:layout_centerHorizontal="true"
+        android:background="@android:drawable/editbox_background_normal"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
@@ -97,19 +104,16 @@
 
     <Button
         android:id="@+id/btnsubmit"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/txstatus"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp"
-        android:background="@drawable/bg_login"
-        android:clickable="true"
-        android:fontFamily="sans-serif-smallcaps"
-        android:text="Tambah"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="400dp"
+        android:background="#e2d1aa"
+        android:text="Tambah Data"
+        android:textSize="17sp"
         android:textAllCaps="false"
-        android:textColor="#D5D9D9"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:fontFamily="sans-serif"
+        android:layout_centerHorizontal="true"
+        />
 
 
 </RelativeLayout>
