--- a/app/src/main/res/layout/activity_tambah_kelahiran.xml
+++ b/app/src/main/res/layout/activity_tambah_kelahiran.xml
@@ -5,23 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
+    android:background="#877054"
     tools:context="com.example.ardiani.myapplication.tambahKelahiran">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="Tambah Data Kelahiran \n Sapi"
         android:textAlignment="center"
         android:textSize="18dp"
-        android:textColor="#2e98e2"
+        android:textColor="#0b0f12"
         android:fontFamily="serif"/>
 
     <EditText
         android:id="@+id/editTextRf"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="85dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -34,7 +36,8 @@
         android:id="@+id/editTextTL"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="140dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -47,7 +50,8 @@
         android:id="@+id/editTexNP"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="195dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -60,7 +64,8 @@
         android:id="@+id/editTextKet"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="250dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -73,21 +78,22 @@
         android:id="@+id/editTextJK"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="305dp"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
         android:hint="Jenis Kelamin"
         android:textColorHint="#054D44"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif"
+        android:background="@android:drawable/editbox_background_normal"/>
 
     <Button
         android:id="@+id/btn_tambah"
-        android:layout_width="300dp"
+        android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_marginTop="360dp"
-        android:background="#1679b3"
+        android:layout_marginTop="400dp"
+        android:background="#e2d1aa"
         android:text="Tambah Data"
         android:textSize="17sp"
         android:textAllCaps="false"
