--- a/app/src/main/res/layout/activity_tambah_kepemilikan.xml
+++ b/app/src/main/res/layout/activity_tambah_kepemilikan.xml
@@ -5,23 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
+    android:background="#877054"
     tools:context="com.example.ardiani.myapplication.tambahKepemilikan">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="Tambah Data Kepemilikan \n Sapi"
         android:textAlignment="center"
         android:textSize="20dp"
-        android:textColor="#2e98e2"
+        android:textColor="#0c0f12"
         android:fontFamily="serif"/>
 
     <EditText
         android:id="@+id/editTextUid"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="90dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -34,7 +36,8 @@
         android:id="@+id/editTextNapel"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="140dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -47,8 +50,9 @@
         android:id="@+id/editTextAlamat"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="190dp"
         android:layout_centerHorizontal="true"
+        android:background="@android:drawable/editbox_background_normal"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
@@ -60,7 +64,8 @@
         android:id="@+id/editTextTgm"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="245dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -73,7 +78,8 @@
         android:id="@+id/editTextke"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="300dp"
+        android:background="@android:drawable/editbox_background_normal"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
@@ -84,10 +90,10 @@
 
     <Button
         android:id="@+id/btn_tambah"
-        android:layout_width="300dp"
+        android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_marginTop="360dp"
-        android:background="#1679b3"
+        android:layout_marginTop="400dp"
+        android:background="#e2d1aa"
         android:text="Tambah Data"
         android:textSize="17sp"
         android:textAllCaps="false"
