--- a/app/src/main/res/layout/activity_tambah_kesehatan.xml
+++ b/app/src/main/res/layout/activity_tambah_kesehatan.xml
@@ -5,38 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
+    android:background="#877054"
     tools:context="com.example.ardiani.myapplication.tambahKesehatan">
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="Tambah Data Kesehatan \nSapi"
         android:textAlignment="center"
         android:textSize="20dp"
-        android:textColor="#2e98e2"
+        android:textColor="#14181b"
         android:fontFamily="serif"/>
 
     <EditText
         android:id="@+id/editTextUid"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="90dp"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
         android:hint=" UID RFID"
         android:textColorHint="#054D44"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif"
+        android:background="@android:drawable/editbox_background_normal" />
 
     <EditText
         android:id="@+id/editTextTgl"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="145dp"
         android:layout_centerHorizontal="true"
+        android:background="@android:drawable/editbox_background_normal"
         android:maxLines="1"
         android:ems="10"
         android:inputType="date"
@@ -48,8 +51,9 @@
         android:id="@+id/editTextDiagnosa"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="200dp"
         android:layout_centerHorizontal="true"
+        android:background="@android:drawable/editbox_background_normal"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
@@ -61,34 +65,36 @@
         android:id="@+id/editTextVaksin"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="255dp"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
         android:hint="Vaksinasi"
         android:textColorHint="#054D44"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif"
+        android:background="@android:drawable/editbox_background_normal"/>
 
     <EditText
         android:id="@+id/editTextPengobatan"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="310dp"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ems="10"
         android:inputType="text"
         android:hint="Pengobatan"
         android:textColorHint="#054D44"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif"
+        android:background="@android:drawable/editbox_background_normal"/>
 
     <Button
         android:id="@+id/btn_tambah"
-        android:layout_width="300dp"
+        android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_marginTop="360dp"
-        android:background="#1679b3"
+        android:layout_marginTop="400dp"
+        android:background="#e2d1aa"
         android:text="Tambah Data"
         android:textSize="17sp"
         android:textAllCaps="false"
