--- a/app/src/main/res/layout/form_pemilik.xml
+++ b/app/src/main/res/layout/form_pemilik.xml
@@ -42,5 +42,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:drawable/editbox_background_normal"/>
+    <EditText
+    android:id="@+id/txt_alamat"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:hint="Alamat"
+    android:singleLine="true"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:drawable/editbox_background_normal"/>
+
 
 </LinearLayout>
