--- a/app/src/main/res/layout/list_pemilik.xml
+++ b/app/src/main/res/layout/list_pemilik.xml
@@ -110,6 +110,31 @@
             android:textColor="@android:color/black" />
 
     </TableRow>
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alamat"
+            tools:layout_editor_absoluteY="21dp" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            tools:layout_editor_absoluteY="19dp"
+            android:layout_marginRight="17dp"
+            android:layout_marginLeft="15dp" />
+        <TextView
+            android:id="@+id/txt_alamat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black" />
+
+    </TableRow>
 
 
 </TableLayout>
